--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 asgiref==3.6.0
+autopep8==2.0.1
 Django==4.1.7
 django-multiselectfield==0.1.12
 Pillow==9.4.0
+psycopg2-binary==2.9.5
+pycodestyle==2.10.0
+six==1.16.0
 sqlparse==0.4.3
+tomli==2.0.1
 tzdata==2022.7
